[package]
name = "stannum"
version = "1.1.0"
edition = "2021"
description = "A command-line utility for syntax highlighting code snippets and generating SVG images."
readme = "README.md"
license = "MIT"
repository = "https://github.com/thejhnsn/stannum"
keywords = ["syntax", "highlighting", "svg", "image"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.28", features = ["derive"] }
font-kit = "0.14.2"
svg = "0.18.0"
syntect = "5.3.0"
anyhow = "1.0"
unicode-width = "0.2.2"
